# Pets

./: .gitignore  INSTRUCOES-INSTALACAO-MANUAL.md  INSTRUCOES-INSTALADOR.md  INSTRUCOES.md  README.md
Executar fora do Códex/: LEIA-ME.txt
Executar fora do Códex/Normal/: config.json
desktop-pets/: Cargo.toml  build-portable.ps1  build.rs  measure-editions.ps1
desktop-pets/package-assets/: DIFERENCAS-ENTRE-EDICOES.txt  LEIA-ME-AUXILIAR.txt  edition-measurements.json
desktop-pets/src/: all_pets_helper.rs  config.rs  edition.rs  embedded_pets.rs  lib.rs  library.rs  main.rs
desktop-pets/src/behavior/: mod.rs  mood.rs  movement.rs
desktop-pets/src/pet/: atlas.rs  mod.rs
desktop-pets/src/windows/: app.rs  metrics.rs  mod.rs
desktop-pets/tests/: all_pets_helper_contract.rs  atlas_contract.rs  config_contract.rs  config_recovery.rs  edition_contract.rs  library_contract.rs  mood_contract.rs  movement_contract.rs  package_docs_contract.rs  package_layout_contract.rs  windows_contract.rs
installer/: Instalador-Pets.spec  LEIA-ME.txt  build.ps1  run_installer.py
installer/pet_installer/: __init__.py  __main__.py  comparison.py  installation.py  package.py  ui.py
installer/tests/: helpers.py  test_comparison.py  test_entrypoint.py  test_installation.py  test_package.py
pets/: manifest.json
pets/arco-iris-2-0/: pet.json  validation.json
pets/kogure-chibi/: pet.json  validation.json
pets/natsu-chibi/: pet.json  validation.json
pets/pokemon-ranger-guardian-signs/: pet.json  validation.json
pets/rainbow-hope/: validation.json
pets/zuko-chibi/: pet.json  (+1 more)
(+30 files in other folders)
