[package]
name = "desktop-pets"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[lib]
name = "desktop_pets"
path = "src/lib.rs"

[[bin]]
name = "DesktopPets"
path = "src/main.rs"

[[bin]]
name = "DesktopPetsMicro"
path = "src/bin/micro.rs"

[[bin]]
name = "DesktopPetsNano"
path = "src/bin/nano.rs"

[[bin]]
name = "DesktopPetsPico"
path = "src/bin/pico.rs"

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["webp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
uuid = { version = "1.23.4", features = ["serde", "v4"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3.23.0"

[build-dependencies]
serde_json = "1.0.150"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = true
